--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -17,10 +17,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/Username"
         android:id="@+id/tx_user"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="72dp"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/tx_pass"
-        android:layout_alignStart="@+id/tx_pass" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,43 +28,31 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/Password"
         android:id="@+id/tx_pass"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="51dp"
         android:layout_below="@+id/tx_user"
-        android:layout_alignLeft="@+id/bt_login"
-        android:layout_alignStart="@+id/bt_login" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/Login"
         android:id="@+id/bt_login"
-        android:layout_marginTop="89dp"
-        android:layout_below="@+id/tx_pass"
-        android:layout_toLeftOf="@+id/bt_forgot"
-        android:layout_marginRight="30dp"
-        android:layout_marginEnd="30dp"
+        android:onClick="OnClickLogin"
+        android:layout_alignTop="@+id/bt_signup"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="OnClickLogin" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password"
-        android:id="@+id/bt_forgot"
-        android:layout_alignTop="@+id/bt_login"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="OnClickForgot" />
+        android:layout_alignRight="@+id/bt_homepage"
+        android:layout_alignEnd="@+id/bt_homepage" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ed_user"
-        android:width="300dp"
-        android:layout_above="@+id/tx_pass"
-        android:layout_alignLeft="@+id/bt_forgot"
-        android:layout_alignStart="@+id/bt_forgot" />
+        android:width="200dp"
+        android:layout_alignBottom="@+id/tx_user"
+        android:layout_alignLeft="@+id/ed_pass"
+        android:layout_alignStart="@+id/ed_pass" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -72,10 +60,10 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/ed_pass"
+        android:width="200dp"
         android:layout_alignBottom="@+id/tx_pass"
-        android:layout_alignLeft="@+id/ed_user"
-        android:layout_alignStart="@+id/ed_user"
-        android:width="300dp" />
+        android:layout_alignRight="@+id/bt_signup"
+        android:layout_alignEnd="@+id/bt_signup" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -83,7 +71,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="SIGN IN"
         android:id="@+id/tx_sign"
-        android:layout_above="@+id/ed_user"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -91,10 +79,33 @@
         android:layout_height="wrap_content"
         android:text="Homepage"
         android:id="@+id/bt_homepage"
+        android:onClick="OnClickHomepage"
+        android:layout_below="@+id/tx_forgotpass"
+        android:layout_toLeftOf="@+id/tx_sign"
+        android:layout_toStartOf="@+id/tx_sign"
+        android:layout_marginTop="50dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Up"
+        android:id="@+id/bt_signup"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/tx_sign"
+        android:layout_toEndOf="@+id/tx_sign" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/forgot_pass"
+        android:id="@+id/tx_forgotpass"
+        android:height="25dp"
         android:layout_below="@+id/bt_login"
-        android:layout_toRightOf="@+id/tx_user"
-        android:layout_toEndOf="@+id/tx_user"
-        android:layout_marginTop="35dp"
-        android:onClick="OnClickHomepage" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp"
+        android:onClick="OnClickForgot" />
 
 </RelativeLayout>
