--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -13,8 +13,9 @@
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/view_pager"
-        ></android.support.v4.view.ViewPager>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"></android.support.v4.view.ViewPager>
 
 </RelativeLayout>
