--- a/app/src/main/res/layout/homepage.xml
+++ b/app/src/main/res/layout/homepage.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.suryansh.infobits.homepage">>
+    tools:context="com.example.suryansh.infobits.homepage">
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
