--- a/app/src/main/res/layout/swipe_image.xml
+++ b/app/src/main/res/layout/swipe_image.xml
@@ -17,10 +17,9 @@
 
     <ImageView
         android:layout_marginTop="25dp"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/image_view"
-
         />
 
 </LinearLayout>
