--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -32,6 +32,58 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"></android.support.v4.view.ViewPager>
 
+        <ImageButton
+            android:layout_width="72dp"
+            android:layout_height="65dp"
+            android:id="@+id/imgbt_service1"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
+            android:src="@drawable/libr"
+            android:layout_marginTop="50dp"
+            android:onClick="onClickLibr"
+
+            />
+
+        <ImageButton
+            android:layout_width="72dp"
+            android:layout_height="65dp"
+            android:id="@+id/imgbt_service2"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
+            android:src="@drawable/libs"
+            android:layout_below="@+id/imgbt_service1"
+            android:onClick="onClickLibs" />
+
+        <ImageButton
+            android:layout_width="72dp"
+            android:layout_height="65dp"
+            android:id="@+id/imgbt_service3"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
+            android:src="@drawable/lost"
+            android:layout_below="@+id/imgbt_service2"
+            android:onClick="onClickLost" />
+        <ImageButton
+            android:layout_width="72dp"
+            android:layout_height="65dp"
+            android:id="@+id/imgbt_service4"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="48dp"
+            android:layout_marginStart="48dp"
+            android:src="@drawable/finder"
+            android:layout_below="@+id/imgbt_service3"
+            android:onClick="onClickFinder" />
 
 
     </RelativeLayout>
