--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-//Responsible for menu items
+    //Responsible for menu items
 
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/home_id"
             android:title="Home"
             android:icon="@drawable/icon1"
-            >Home</item>
+            ></item>
 
         <item
             android:id="@+id/service1_id"
             android:title="Service1"
-            android:icon="@drawable/icon2" />
+            android:icon="@drawable/icon2"
+            ></item>
 
         <item
             android:id="@+id/service2_id"
             android:title="Service3"
             android:icon="@drawable/icon3"
-            />
+            ></item>
 
     </group>
 
@@ -43,7 +44,7 @@
                 android:icon="@drawable/icon4"
                 ></item>
 
-            </menu>
+        </menu>
     </item>
 
 </menu>
