--- a/app/src/main/res/layout/activity_communication_panel.xml
+++ b/app/src/main/res/layout/activity_communication_panel.xml
@@ -18,7 +18,7 @@
 
             <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                 android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"
-                app:layout_collapseMode="pin" app:popupTheme="@style/Theme.AppCompat.Light"
+                app:layout_collapseMode="pin" app:logo="@mipmap/logo" android:title="@string/title_activity_communication_panel" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
                 android:indeterminate="false" />
 
