--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="180dp"
-    android:background="@drawable/tag"
-    >
+    android:background="@drawable/tag">
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -21,10 +20,11 @@
         android:textStyle="bold"
         android:padding="5dp"
         android:id="@+id/name"
-        />
+        android:layout_alignRight="@+id/email"
+        android:layout_alignEnd="@+id/email" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="suryanshr@xyzmail.com"
         android:layout_toRightOf="@+id/profile"
@@ -33,6 +33,7 @@
         android:textStyle="bold"
         android:padding="5dp"
         android:id="@+id/email"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
