--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#75C3E8</color>
-    <color name="colorPrimaryDark">#211D70</color>
+    <color name="colorPrimaryDark">#211d70</color>
     <color name="colorAccent">#E0DFEB</color>
 </resources>
