--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        >
+        android:background="#fff">
         <include
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
@@ -26,12 +26,67 @@
             android:layout_marginTop="0dp" />
 
         <android.support.v4.view.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/view_pager"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"></android.support.v4.view.ViewPager>
+            android:layout_above="@+id/imgbt_service1"
+            android:layout_marginTop="70dp"
+            android:padding="0dp"></android.support.v4.view.ViewPager>
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imgbt_service1"
+            android:src="@drawable/librx"
+            android:onClick="onClickLibr"
+
+            android:padding="0dp"
+            android:clickable="true"
+            android:layout_alignTop="@+id/imgbt_service2"
+            android:layout_alignLeft="@+id/imgbt_service4"
+            android:layout_alignStart="@+id/imgbt_service4" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imgbt_service2"
+            android:onClick="onClickLibs"
+            android:src="@drawable/libsx"
+            android:layout_marginStart="60dp"
+            android:layout_marginLeft="60dp"
+            android:padding="0dp"
+            android:clickable="true"
+            android:layout_above="@+id/imgbt_service3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="36dp" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imgbt_service3"
+            android:src="@drawable/opac"
+            android:onClick="onClickOPAC"
+            android:padding="0dp"
+            android:longClickable="true"
+            android:clickable="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignLeft="@+id/imgbt_service2"
+            android:layout_alignStart="@+id/imgbt_service2"
+            android:layout_marginBottom="30dp" />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imgbt_service4"
+            android:onClick="onClickFinder"
+            android:layout_marginRight="61dp"
+            android:layout_marginEnd="61dp"
+            android:padding="0dp"
+            android:src="@drawable/bfinder"
+            android:layout_below="@+id/imgbt_service2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:clickable="true" />
 
 
     </RelativeLayout>
@@ -45,7 +100,12 @@
         app:menu="@menu/drawer_menu"
         app:headerLayout="@layout/navigation_drawer_header"
         >
-
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tag"
+            android:layout_marginTop="500dp"
+            android:src="@drawable/tag" />
     </android.support.design.widget.NavigationView>
 
 
