--- a/app/src/main/res/layout/swipe_image.xml
+++ b/app/src/main/res/layout/swipe_image.xml
@@ -18,13 +18,14 @@
         android:layout_marginTop="0dp" />
 
     <ImageView
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/image_view"
 
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="0dp"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:padding="0dp" />
 
 </RelativeLayout>
