--- a/app/src/main/res/layout/activity_communication_panel.xml
+++ b/app/src/main/res/layout/activity_communication_panel.xml
@@ -12,12 +12,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:fitsSystemWindows="true"
+    android:layout_height="match_parent" android:fitsSystemWindows="false"
     tools:context="com.example.suryansh.infobits.CommunicationPanel">
 
     <android.support.design.widget.AppBarLayout android:id="@+id/app_bar"
         android:fitsSystemWindows="true" android:layout_height="@dimen/app_bar_height"
-        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay" android:layout_marginTop="25dp">
+        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
+        android:baselineAligned="false">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"
@@ -30,7 +31,7 @@
 
     <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin" app:layout_anchor="@id/toolbar"
+        android:layout_margin="@dimen/fab_margin" app:layout_anchor="@+id/commlayout"
         app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
