--- a/app/src/main/res/layout/activity_communication_panel.xml
+++ b/app/src/main/res/layout/activity_communication_panel.xml
@@ -18,21 +18,17 @@
     <android.support.design.widget.AppBarLayout android:id="@+id/app_bar"
         android:fitsSystemWindows="true" android:layout_height="@dimen/app_bar_height"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:background="@color/colorPrimaryDark">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"
-            app:layout_collapseMode="pin" app:logo="@mipmap/logo" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-            android:indeterminate="false" />
+            app:layout_collapseMode="pin" app:logo="@mipmap/logo"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:indeterminate="false" android:textColor="#fff" />
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_communication_panel" />
-
-    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
-        android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin" app:layout_anchor="@+id/commlayout"
-        app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
     <android.support.design.widget.NavigationView
