--- a/app/src/main/res/layout/content_communication_panel.xml
+++ b/app/src/main/res/layout/content_communication_panel.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_communication_panel" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.suryansh.infobits.CommunicationPanel">
-    <RelativeLayout
+    tools:context="com.example.suryansh.infobits.CommunicationPanel"
+    android:orientation="vertical">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:orientation="vertical"
-        android:background="#fff"
-        android:id="@+id/commlayout"
-        android:nestedScrollingEnabled="false">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="vertical"
+            android:background="#eee"
+            android:id="@+id/commlayout"
+            android:minHeight="500dp">
             <ProgressBar
                 android:id="@+id/progressBar1"
                 style="?android:attr/progressBarStyleLarge"
@@ -23,54 +30,168 @@
                 android:layout_centerHorizontal="true"
                 android:visibility="visible" />
 
-            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:id="@+id/error"
-                android:visibility="invisible"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="15dp" />
-
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/comm1"
                 android:clickable="true"
-                android:onClick="conversation"
-                android:visibility="visible"
+                android:radius="50dp"
+                android:onClick="conversation1"
                 android:layout_below="@+id/error"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="false"
+                android:background="#e0dfeb"
+                android:layout_margin="10dp"
+                android:padding="10dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"
+                android:visibility="gone" />
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/comm2"
                 android:clickable="true"
-                android:onClick="conversation"
-                android:visibility="visible"
+                android:onClick="conversation2"
+                android:visibility="gone"
                 android:layout_below="@+id/comm1"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:background="#e0dfeb"
+                android:layout_margin="10dp"
+                android:padding="10dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/comm3"
                 android:clickable="true"
-                android:onClick="conversation"
-                android:visibility="visible"
+                android:onClick="conversation3"
+                android:visibility="gone"
                 android:layout_below="@+id/comm2"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:background="#e0dfeb"
+                android:layout_margin="10dp"
+                android:padding="10dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/comm4"
                 android:clickable="true"
-                android:onClick="conversation"
-                android:visibility="visible"
+                android:onClick="conversation4"
+                android:visibility="gone"
                 android:layout_below="@+id/comm3"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:background="#e0dfeb"
+                android:layout_margin="10dp"
+                android:padding="10dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:id="@+id/message"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:visibility="gone" />
+
+        </RelativeLayout>
+    </ScrollView>
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/convList"
+        android:background="#eee" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="86dp"
+        android:background="@color/colorPrimaryDark"
+        android:padding="10dp"
+        android:visibility="gone"
+        android:id="@+id/replyLayout">
+        <EditText
+            android:layout_width="310dp"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/replyText"
+            android:background="#eee"
+            android:height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/send"
+            android:layout_toStartOf="@+id/send" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/send"
+            android:src="@android:drawable/ic_menu_send"
+            android:layout_alignTop="@+id/editText"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="false"
+            android:layout_marginLeft="10dp" />
     </RelativeLayout>
 
-</android.support.v4.widget.NestedScrollView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:id="@+id/commMenu"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:visibility="gone">
+        <android.support.design.widget.FloatingActionButton android:id="@+id/prev"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin" android:src="@android:drawable/ic_media_previous"
+            app:layout_anchorGravity="bottom|end" />
+        <android.support.design.widget.FloatingActionButton android:id="@+id/next"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_media_next"
+            android:layout_alignTop="@+id/prev"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="15dp" />
+        <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add"
+            android:layout_alignTop="@+id/next"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:id="@+id/convMenu"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:visibility="gone">
+        <android.support.design.widget.FloatingActionButton android:id="@+id/back"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin" android:src="@android:drawable/ic_media_previous"
+            app:layout_anchorGravity="bottom|end"
+            android:layout_alignParentLeft="true" />
+        <android.support.design.widget.FloatingActionButton android:id="@+id/delete"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_delete"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="false"
+            android:layout_margin="@dimen/fab_margin" />
+
+        <android.support.design.widget.FloatingActionButton android:id="@+id/reply"
+            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            app:layout_anchorGravity="bottom|end" android:src="@android:drawable/ic_input_add"
+            android:layout_alignTop="@+id/back"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+</RelativeLayout>
