--- a/app/src/main/res/menu/comm_drawer.xml
+++ b/app/src/main/res/menu/comm_drawer.xml
@@ -5,14 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/home"
-            android:title="Book Recommendation"
-            android:checked="true"
-            ></item>
-
-        <item
             android:id="@+id/breco"
             android:title="Book Recommendation"
+            android:checked="true"
             ></item>
 
         <item
@@ -38,6 +33,10 @@
         <item
             android:id="@+id/feedback"
             android:title="Feedback"
+            ></item>
+        <item
+            android:id="@+id/refresh"
+            android:title="Refresh Data"
             ></item>
 
     </group>
