--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -82,7 +82,7 @@
             android:layout_marginRight="61dp"
             android:layout_marginEnd="61dp"
             android:padding="0dp"
-            android:src="@drawable/bfinder"
+            android:src="@drawable/cwlx"
             android:layout_below="@+id/imgbt_service2"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
