--- a/app/src/main/res/layout/breview.xml
+++ b/app/src/main/res/layout/breview.xml
@@ -87,7 +87,7 @@
         <EditText
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:id="@+id/editText2"
+            android:id="@+id/author"
             android:layout_gravity="right"
             android:layout_alignLeft="@+id/authorText"
             android:layout_alignStart="@+id/title"
@@ -135,8 +135,8 @@
             android:layout_below="@+id/reviewText"
             android:layout_alignLeft="@+id/reviewText"
             android:layout_alignStart="@+id/reviewText"
-            android:layout_alignRight="@+id/editText2"
-            android:layout_alignEnd="@+id/editText2"
+            android:layout_alignRight="@+id/author"
+            android:layout_alignEnd="@+id/author"
             android:layout_alignParentEnd="false"
             android:textSize="20sp"
             android:textColor="@color/colorPrimaryDark"
@@ -144,7 +144,9 @@
             android:autoText="true"
             android:padding="5dp"
             android:gravity="top"
-            android:textAlignment="gravity" />
+            android:textAlignment="gravity"
+            android:maxLength="100"
+            android:hint="Maximum 100 words" />
 
     </RelativeLayout>
 
