--- a/app/src/main/res/layout/dlost.xml
+++ b/app/src/main/res/layout/dlost.xml
@@ -2,20 +2,267 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#fff">
 
     <android.support.design.widget.AppBarLayout android:id="@+id/app_bar"
         android:fitsSystemWindows="true" android:layout_height="@dimen/app_bar_height"
         android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay"
+        android:title="I Just Read This Book!"
         android:baselineAligned="false"
         android:background="@color/colorPrimaryDark">
 
         <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
             android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"
             app:layout_collapseMode="pin" app:logo="@mipmap/logo"
-            android:title="Documents Not Found"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:indeterminate="false" android:textColor="#fff" />
     </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:background="#ddd"
+        android:layout_below="@+id/app_bar"
+        android:layout_margin="10dp"
+        android:id="@+id/dlostForm">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Please fill in the details:"
+            android:id="@+id/header"
+            android:layout_gravity="left"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="15dp"
+            android:textSize="28sp"
+            android:textColor="@color/colorPrimaryDark" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/newConv"
+            android:clickable="true"
+            android:text="Send"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="25sp"
+            android:onClick="newConv"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/dlostlayout" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/header"
+            android:orientation="horizontal"
+            android:paddingLeft="40dp"
+            android:id="@+id/documentLost"
+            android:paddingRight="40dp">
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Books"
+                android:id="@+id/radioB"
+                android:checked="true"
+                android:layout_alignTop="@+id/radioCompliment"
+                android:layout_toLeftOf="@+id/newConv"
+                android:layout_toStartOf="@+id/newConv"
+                android:layout_marginRight="25dp"
+                android:textSize="25sp"
+                android:buttonTint="#211d70" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Journals"
+                android:id="@+id/radioJ"
+                android:checked="false"
+                android:layout_alignTop="@+id/radioCompliment"
+                android:layout_toRightOf="@+id/radioCompliment"
+                android:layout_toEndOf="@+id/radioCompliment"
+                android:layout_gravity="center_horizontal"
+                android:textSize="25sp"
+                android:buttonTint="#211d70" />
+
+        </RadioGroup>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/dlostlayout"
+            android:layout_below="@+id/documentLost">
+
+            <RelativeLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ddd"
+                android:id="@+id/journalLayout"
+                android:layout_alignParentLeft="false"
+                android:padding="10dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Month\n&amp; Year"
+                    android:id="@+id/monthYearText"
+                    android:textSize="28sp"
+                    android:textAlignment="gravity"
+                    android:layout_centerVertical="true"
+                    android:layout_alignLeft="@+id/journalText"
+                    android:layout_alignStart="@+id/journalText" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Journal"
+                    android:id="@+id/journalText"
+                    android:textSize="28sp"
+                    android:textAlignment="gravity"
+                    android:layout_margin="10dp" />
+
+                <EditText
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/journal"
+                    android:layout_gravity="right"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="#fff"
+                    android:padding="5dp"
+                    android:textSize="25sp"
+                    android:layout_toRightOf="@+id/journalText"
+                    android:layout_margin="10dp"
+                    android:layout_alignParentRight="true" />
+
+                <DatePicker
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/monthYear"
+                    android:layout_alignStart="@+id/journal"
+                    android:layout_below="@+id/journal"
+                    android:layout_toRightOf="@+id/monthYearText"
+                    android:layout_margin="10dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner"
+                    android:calendarTextColor="#211d70"
+                    android:spinnersShown="true" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ddd"
+                android:padding="10dp"
+                android:id="@+id/bookLayout">
+
+                <EditText
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/title"
+                    android:layout_gravity="right"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="#fff"
+                    android:padding="5dp"
+                    android:textSize="25sp"
+                    android:layout_alignTop="@+id/titleText"
+                    android:layout_alignRight="@+id/accno"
+                    android:layout_alignEnd="@+id/accno"
+                    android:layout_toEndOf="@+id/authorText"
+                    android:layout_toRightOf="@+id/authorText" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Title"
+                    android:id="@+id/titleText"
+                    android:textSize="28sp"
+                    android:textAlignment="gravity"
+                    android:layout_margin="10dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Author"
+                    android:id="@+id/authorText"
+                    android:textSize="28sp"
+                    android:textAlignment="gravity"
+                    android:layout_below="@+id/title"
+                    android:layout_alignParentLeft="false"
+                    android:layout_alignParentStart="false"
+                    android:layout_margin="10dp" />
+
+                <EditText
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/author"
+                    android:layout_gravity="right"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="#fff"
+                    android:padding="5dp"
+                    android:textSize="25sp"
+                    android:layout_below="@+id/title"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_alignRight="@+id/title"
+                    android:layout_alignEnd="@+id/title"
+                    android:layout_alignLeft="@+id/title"
+                    android:layout_alignStart="@+id/title" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Accession\nNo."
+                    android:id="@+id/accnoText"
+                    android:textSize="28sp"
+                    android:textAlignment="gravity"
+                    android:layout_below="@+id/authorText"
+                    android:layout_margin="10dp" />
+
+                <EditText
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/accno"
+                    android:layout_gravity="right"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="#fff"
+                    android:padding="5dp"
+                    android:textSize="25sp"
+                    android:layout_toRightOf="@+id/accnoText"
+                    android:layout_below="@+id/author"
+                    android:layout_margin="10dp" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/textView6"
+            android:layout_below="@+id/newConv"
+            android:layout_alignLeft="@+id/header"
+            android:layout_alignStart="@+id/header"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:visibility="visible"
+            android:textIsSelectable="false"
+            android:textSize="12sp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
